--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
