--- a/package.json
+++ b/package.json
@@ -14,17 +14,29 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.0",
     "@popperjs/core": "^2.11.8",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.1",
     "express": "^4.21.1",
+    "express-jwt": "^8.5.1",
     "json-server": "^1.0.0-beta.3",
-    "mongoose": "^8.8.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "stream-browserify": "^3.0.0",
     "sweetalert2": "^11.14.5",
+    "vm-browserify": "^1.1.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
