--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
@@ -32,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pinia": "^2.3.1",
     "stream-browserify": "^3.0.0",
     "sweetalert2": "^11.14.5",
     "vm-browserify": "^1.1.2",
