--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.0",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^6.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
@@ -28,12 +30,14 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pinia": "^2.3.1",
     "stream-browserify": "^3.0.0",
+    "stripe": "^17.7.0",
     "sweetalert2": "^11.14.5",
     "vm-browserify": "^1.1.2",
     "vue": "^3.5.13",
