diseño pagina mejorado

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
@@ -38,6 +38,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pinia": "^2.3.1",
+    "ramirezizan": "file:",
     "stream-browserify": "^3.0.0",
     "stripe": "^17.7.0",
     "sweetalert2": "^11.14.5",
